<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_cadastra_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.edu.clinicamedica.clinicamedica.MainActivityCadastraUsuario">

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        tools:text="@string/nome"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEditarUsuario"
        android:layout_alignTop="@+id/buttonExcluirUsuario"
        android:layout_alignLeft="@+id/buttonCadastrarConsulta"
        android:layout_alignStart="@+id/buttonCadastrarConsulta"
        tools:text="@string/editar"
        android:onClick="editar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/editTextUsuario"
        android:layout_alignStart="@+id/editTextUsuario"
        android:layout_marginTop="9dp" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuscarUsuario"
        android:layout_above="@+id/buttonExcluirUsuario"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_alignStart="@+id/editTextPass"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="14dp"
        tools:text="@string/buscar"
        android:onClick="buscar" />

    <Button
        android:text="@string/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCadastrarConsulta"
        android:layout_alignBaseline="@+id/buttonBuscarUsuario"
        android:layout_alignBottom="@+id/buttonBuscarUsuario"
        android:layout_alignRight="@+id/editTextPass"
        android:layout_alignEnd="@+id/editTextPass"
        tools:text="@string/cadastro"
        android:onClick="cadastrarUsuario" />

    <Button
        android:text="@string/excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExcluirUsuario"
        android:layout_marginBottom="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/buttonBuscarUsuario"
        android:layout_alignStart="@+id/buttonBuscarUsuario"
        tools:text="@string/excluir"
        android:onClick="excluirUsuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNomeUsuario"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUsuario"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/editTextNomeUsuario"
        android:layout_alignStart="@+id/editTextNomeUsuario" />

    <TextView
        android:text="@string/usu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView7"
        tools:text="@string/usu"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/editTextNomeUsuario"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        tools:text="@string/senha"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="47dp" />

    <TextView
        android:text="@string/tipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        tools:text="@string/tipoUsuario"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/editTextPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="15dp"
        android:id="@+id/spinnerTipoUser" />
</RelativeLayout>
