<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_cadastra_paciente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.edu.clinicamedica.clinicamedica.MainActivityCadastraPaciente">

    <TextView
        android:text="@string/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        tools:text="@string/telefone"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNomePaciente"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        tools:text="@string/nome"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        tools:text="@string/nascimento"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/editTextNomePaciente"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/editTextNascimentoPaciente"
        android:layout_below="@+id/textView18"
        android:layout_alignLeft="@+id/buttonExcluiPaciente"
        android:layout_alignStart="@+id/buttonExcluiPaciente"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextTelefonePaciente"
        android:inputType="phone"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/editTextNascimentoPaciente"
        android:layout_alignStart="@+id/editTextNascimentoPaciente"
        android:layout_marginTop="13dp" />

    <Button
        android:text="@string/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCadastraPaciente"
        android:layout_below="@+id/editTextTelefonePaciente"
        android:layout_alignRight="@+id/editTextTelefonePaciente"
        android:layout_alignEnd="@+id/editTextTelefonePaciente"
        android:layout_marginTop="34dp"
        android:onClick="cadastrarPaciente" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuscaPaciente"
        android:layout_alignBaseline="@+id/buttonCadastraPaciente"
        android:layout_alignBottom="@+id/buttonCadastraPaciente"
        android:layout_alignLeft="@+id/editTextTelefonePaciente"
        android:layout_alignStart="@+id/editTextTelefonePaciente"
        android:onClick="buscar" />

    <Button
        android:text="@string/excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExcluiPaciente"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/buttonBuscaPaciente"
        android:layout_alignLeft="@+id/editTextNomePaciente"
        android:layout_alignStart="@+id/editTextNomePaciente"
        android:onClick="excluirPaciente" />

    <Button
        android:text="@string/alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAlteraPaciente"
        android:layout_alignBaseline="@+id/buttonExcluiPaciente"
        android:layout_alignBottom="@+id/buttonExcluiPaciente"
        android:layout_toRightOf="@+id/textView17"
        android:layout_toEndOf="@+id/textView17"
        android:onClick="editar" />
</RelativeLayout>
