<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_cadastra_medico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.edu.clinicamedica.clinicamedica.MainActivityCadastraMedico">

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:id="@+id/textView4"
        tools:text="@string/nome"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextNomeMedico" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editTextNomeMedico"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="59dp"
        android:id="@+id/editTextCrmMedico" />

    <TextView
        android:text="@string/crm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/editTextNomeMedico"
        android:layout_alignLeft="@+id/editTextNomeMedico"
        android:layout_alignStart="@+id/editTextNomeMedico"
        tools:text="@string/crm"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/especialidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView15"
        android:layout_below="@+id/editTextCrmMedico"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        tools:text="@string/especialidade"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/buttonbuscaMedico"
        android:layout_below="@+id/spinnerEspecialidade"
        android:layout_alignLeft="@+id/editTextCrmMedico"
        android:layout_alignStart="@+id/editTextCrmMedico"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        tools:text="@string/buscar"
        android:onClick="buscar" />

    <Button
        android:text="@string/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCadastraMedico"
        android:layout_alignBaseline="@+id/buttonbuscaMedico"
        android:layout_alignBottom="@+id/buttonbuscaMedico"
        android:layout_toRightOf="@+id/buttonbuscaMedico"
        android:layout_toEndOf="@+id/buttonbuscaMedico"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        tools:text="@string/cadastro"
        android:onClick="cadastrarMedico" />

    <Button
        android:text="@string/excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonbuscaMedico"
        android:layout_alignRight="@+id/buttonbuscaMedico"
        android:layout_alignEnd="@+id/buttonbuscaMedico"
        android:layout_marginTop="24dp"
        android:id="@+id/buttonExcluiMedico"
        tools:text="@string/excluir"
        android:onClick="excluirMedico" />

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonExcluiMedico"
        android:layout_alignLeft="@+id/buttonCadastraMedico"
        android:layout_alignStart="@+id/buttonCadastraMedico"
        android:id="@+id/buttonEditaMedico"
        tools:text="@string/editar"
        android:onClick="editar" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEspecialidade"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />
</RelativeLayout>
