<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_cadastra_consulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.edu.clinicamedica.clinicamedica.MainActivityCadastraConsulta">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNomePacienteConsulta"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20" />

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/textView19"
        tools:text="@string/nome"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editTextNomePacienteConsulta"
        android:layout_alignBottom="@+id/editTextNomePacienteConsulta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDataConsulta"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextHorarioConsulta"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/textView20"
        tools:text="@string/horario"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/buttonBuscaPacienteConsulta"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView21"
        tools:text="@string/data"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/editTextHorarioConsulta"
        android:layout_alignRight="@+id/textView19"
        android:layout_alignEnd="@+id/textView19" />

    <Button
        android:text="@string/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/buttonCadastraCconsulta"
        tools:text="@string/cadastro"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21"
        android:layout_marginBottom="31dp"
        android:onClick="cadastrarConsulta" />

    <Button
        android:text="@string/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancelaConsulta"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        tools:text="@string/cancelar"
        android:layout_alignBaseline="@+id/buttonCadastraCconsulta"
        android:layout_alignBottom="@+id/buttonCadastraCconsulta"
        android:layout_alignRight="@+id/buttonBuscaPacienteConsulta"
        android:layout_alignEnd="@+id/buttonBuscaPacienteConsulta"
        android:onClick="cancela" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextObs"
        android:layout_alignBottom="@+id/textView24"
        android:layout_alignLeft="@+id/editTextDataConsulta"
        android:layout_alignStart="@+id/editTextDataConsulta" />

    <TextView
        android:text="@string/medico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        tools:text="@string/medico"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editTextDataConsulta"
        android:layout_alignEnd="@+id/editTextDataConsulta"
        android:id="@+id/editTextNomeMedicoConsulta" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuscaPacienteConsulta"
        tools:text="@string/buscar"
        android:onClick="buscarPaciente"
        android:layout_below="@+id/editTextNomePacienteConsulta"
        android:layout_alignRight="@+id/editTextNomePacienteConsulta"
        android:layout_alignEnd="@+id/editTextNomePacienteConsulta" />

    <TextView
        android:text="@string/obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        tools:text="@string/obs"
        android:layout_above="@+id/buttonCadastraCconsulta"
        android:layout_alignLeft="@+id/textView20"
        android:layout_alignStart="@+id/textView20"
        android:layout_marginBottom="45dp" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBuscaMedicoPaciente"
        tools:text="@string/buscar"
        android:layout_above="@+id/editTextObs"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="buscarMedico" />

</RelativeLayout>
