<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_atendimentos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.edu.clinicamedica.clinicamedica.MainActivityAtendimentos">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="19dp"
        android:id="@+id/editTextHorarioAt" />

    <Button
        android:text="@string/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/button"
        android:layout_below="@+id/editTextHorarioAt"
        android:layout_alignRight="@+id/editTextHorarioAt"
        android:layout_alignEnd="@+id/editTextHorarioAt"
        tools:text="@string/buscar"
        android:onClick="buscar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextPacienteAt"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="33dp" />

    <TextView
        android:text="@string/paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/editTextPacienteAt"
        android:layout_toLeftOf="@+id/editTextPacienteAt"
        android:layout_toStartOf="@+id/editTextPacienteAt"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        tools:text="@string/paciente" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextMedicoAt"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editTextPacienteAt"
        android:layout_alignStart="@+id/editTextPacienteAt" />

    <TextView
        android:text="@string/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_below="@+id/editTextMedicoAt"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="34dp"
        tools:text="@string/data" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDataAt"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/editTextMedicoAt"
        android:layout_alignStart="@+id/editTextMedicoAt"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/medico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        tools:text="@string/medico" />

    <TextView
        android:text="@string/obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_below="@+id/editTextDataAt"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="48dp"
        tools:text="@string/obs" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextObsAt"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignLeft="@+id/editTextDataAt"
        android:layout_alignStart="@+id/editTextDataAt" />

    <TextView
        android:text="@string/horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:text="@string/horario"
        android:layout_alignBaseline="@+id/editTextHorarioAt"
        android:layout_alignBottom="@+id/editTextHorarioAt"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />
</RelativeLayout>
